--- a/package.json
+++ b/package.json
@@ -66,7 +66,5 @@
 		"build": "webpack --mode production",
 		"preversion": "npm run build; if [ -n \"$(git status src/ckeditor.js build/ --porcelain)\" ]; then git add -u src/ckeditor.js build/ && git commit -m 'Internal: Build.'; fi"
 	},
-	"dependencies": {
-		"ckeditor5-simple-upload": "^1.0.4"
-	}
+	"dependencies": {}
 }
